# pico-usb

./: .gitignore  FAQ.md  LICENSE  README.md  enumeration.md  faq.md  host-enumeration.md  rp2040-usb.md  usb-rp2040.md
device/: CMakeLists.txt  device.c  usb_common.h  verify.py
dodo/: CMakeLists.txt  dodo.c  usb_common.h
hoho/: CMakeLists.txt  hoho.c
host/: CMakeLists.txt  helpers.h  hexdump.h  host.c  host.c-20240214145137  pico_usb.h  ring.c  ring_buffer.c  ring_buffer.h  usb_common.h
